--- a/AgroTrade/appsettings.json
+++ b/AgroTrade/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=AgroTradeDb;User=root;Password=;"
+    "DefaultConnection": "Host=ep-red-unit-a1luh8zr.ap-southeast-1.aws.neon.tech;Database=neondb;Username=neondb_owner;Password=IOQ78inkXvBr;SSL Mode=Require"
   },
   "AllowedHosts": "*"
 }
